--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       background: #fafafa;
       border: 1px solid #888;
       border-radius: 4px;
-      width: 240px;
+      width: 280px;
       max-height: 90vh;
       overflow: auto;
       z-index: 20;
@@ -64,11 +64,13 @@
     .window label {
       display:block; margin:6px 0; font-size:14px;
     }
-    .window input[type="range"], .window input[type="number"], .window select {
+    .window input[type="range"], .window input[type="number"], .window select, .window textarea {
       width:100%; margin:4px 0; box-sizing:border-box; padding:4px;
+      font-size:14px;
     }
     .window input:disabled,
-    .window select:disabled {
+    .window select:disabled,
+    .window textarea:disabled {
       background: #f0f0f0; cursor: not-allowed;
     }
 
@@ -103,7 +105,7 @@
     }
     #originsList .remove-origin:disabled {
       color: #ccc;
-      cursor: not-allowed;
+      cursor:not-allowed;
     }
     #originsList .origin-mag {
       width: 60px;
@@ -119,9 +121,80 @@
       padding:6px 12px; font-size:14px; cursor:pointer;
     }
 
+    /* Modal overlay for tutorial */
+    .modal-overlay {
+      position: fixed;
+      top: 0; left: 0; width: 100%; height: 100%;
+      background: rgba(0,0,0,0.4);
+      backdrop-filter: blur(4px);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      opacity: 0;
+      visibility: hidden;
+      transition: opacity 0.3s ease;
+      z-index: 10000;
+    }
+    .modal-overlay.show {
+      opacity: 1;
+      visibility: visible;
+    }
+    /* Modal content styled like .window but centered */
+    .modal-content {
+      background: #fafafa;
+      border: 1px solid #888;
+      border-radius: 4px;
+      width: 400px;
+      max-width: 90vw;
+      max-height: 80vh;
+      overflow: auto;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+      transform: translateY(-20px);
+      opacity: 0;
+      transition: transform 0.3s ease, opacity 0.3s ease;
+    }
+    .modal-overlay.show .modal-content {
+      transform: translateY(0);
+      opacity: 1;
+    }
+    .modal-content header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background: #444;
+      color: white;
+      padding: 8px 12px;
+      border-radius: 4px 4px 0 0;
+      font-size: 16px;
+    }
+    .modal-content .modal-body {
+      padding: 12px;
+      color: #111;
+    }
+    .modal-content .modal-body p {
+      margin: 8px 0;
+      font-size: 14px;
+    }
+    .modal-content .modal-body code {
+      background: #eee;
+      padding: 2px 4px;
+      border-radius: 3px;
+      font-family: monospace;
+      font-size: 13px;
+    }
+    .modal-content footer {
+      padding: 8px 12px;
+      text-align: right;
+    }
+    .modal-content footer button {
+      padding: 6px 12px;
+      font-size: 14px;
+    }
+
     @media (max-width:600px) {
       /* On small screens, windows may overlap, but can still be dragged */
       .window { width: 90vw; }
+      .modal-content { width: 90vw; }
     }
   </style>
 </head>
@@ -147,7 +220,6 @@
 
       <!-- Magnitude & control buttons -->
       <label style="margin-top:8px;">Global Magnitude (default for new origins):
-        <!-- Removed max attribute; keep min=0 so only non-negative -->
         <input id="mag" type="number" min="0" step="0.1" value="5.0">
       </label>
       <button id="startSim">Start</button>
@@ -157,7 +229,8 @@
       <details style="margin-top:8px;">
         <summary>Medium Legend</summary>
         <div id="mediumLegend">
-          <span style="margin-top:8px;">&nbsp;</span>
+          <!-- Populated by JS -->
+          <ul><li>Loading...</li></ul>
         </div>
       </details>
       <details style="margin-top:8px;">
@@ -172,7 +245,7 @@
     </div>
   </details>
 
-  <details id="paintDropdown" class="window" style="top:10px; left:270px;">
+  <details id="paintDropdown" class="window" style="top:10px; left:310px;">
     <summary>
       <span>Paint Tools</span>
       <span class="drag-handle">⣿</span>
@@ -197,30 +270,159 @@
       <label style="margin-top:8px;">Paint Medium:
         <select id="paintMediumSelect"></select>
       </label>
+
+      <!-- Undo/Redo buttons side by side -->
+      <div style="display:flex; gap:8px; margin-top:8px;">
+        <button id="undoBtn">Undo</button>
+        <button id="redoBtn">Redo</button>
+      </div>
     </div>
   </details>
 
-  <details id="terrainDropdown" class="window" style="top:10px; left:530px;">
+  <details id="terrainDropdown" class="window" style="top:10px; left:630px;">
     <summary>
       <span>Terrain Generation</span>
       <span class="drag-handle">⣿</span>
     </summary>
     <div class="content">
-      <label>Noise Scale: <span id="noiseScaleLabel">0.10</span></label>
-      <input id="noiseScale" type="range" min="0.01" max="0.5" step="0.01" value="0.10">
+      <!-- Mode selector -->
+      <label>Mode:
+        <select id="terrainMode">
+          <option value="synthetic">Synthetic Metro Manila</option>
+          <option value="noise">Noise-based</option>
+          <option value="geojson">GeoJSON-based</option>
+        </select>
+      </label>
 
-      <label>Water Threshold: <span id="waterThreshLabel">0.30</span></label>
-      <input id="waterThresh" type="range" min="0" max="1" step="0.01" value="0.30">
+      <!-- Synthetic controls -->
+      <div id="syntheticControls" style="margin-top:8px;">
+        <label>Water zone fraction:
+          <input id="synFracWater" type="number" min="0" max="1" step="0.01" value="0.1">
+        </label>
+        <label>Marine Clay fraction:
+          <input id="synFracClay" type="number" min="0" max="1" step="0.01" value="0.2">
+        </label>
+        <label>Alluvial Soil fraction:
+          <input id="synFracAlluvial" type="number" min="0" max="1" step="0.01" value="0.4">
+        </label>
+        <label>Volcanic Soil fraction:
+          <input id="synFracVolcanic" type="number" min="0" max="1" step="0.01" value="0.3">
+        </label>
+        <small style="font-size:12px; color:#555;">
+          Fractions will be normalized if sum ≠ 1.
+        </small>
+      </div>
 
-      <label>Sand Threshold: <span id="sandThreshLabel">0.40</span></label>
-      <input id="sandThresh" type="range" min="0" max="1" step="0.01" value="0.40">
+      <!-- Noise controls -->
+      <div id="noiseControls" style="margin-top:8px; display:none;">
+        <label>Noise Scale: <span id="noiseScaleLabel">0.10</span></label>
+        <input id="noiseScale" type="range" min="0.01" max="0.5" step="0.01" value="0.10">
 
-      <label>Rock Threshold: <span id="rockThreshLabel">0.70</span></label>
-      <input id="rockThresh" type="range" min="0" max="1" step="0.01" value="0.70">
+        <label>Water Threshold: <span id="waterThreshLabel">0.30</span></label>
+        <input id="waterThresh" type="range" min="0" max="1" step="0.01" value="0.30">
 
-      <button id="generateTerrain" style="margin-top:8px;">Generate Terrain</button>
+        <label>Sand (Alluvial) Threshold: <span id="sandThreshLabel">0.40</span></label>
+        <input id="sandThresh" type="range" min="0" max="1" step="0.01" value="0.40">
+
+        <label>Rock Threshold: <span id="rockThreshLabel">0.70</span></label>
+        <input id="rockThresh" type="range" min="0" max="1" step="0.01" value="0.70">
+      </div>
+
+      <!-- GeoJSON controls -->
+      <div id="geojsonControls" style="margin-top:8px; display:none;">
+        <label>Bounding Box (lat/lon):</label>
+        <label>latMin: <input id="latMin" type="number" step="0.0001" value="14.4"></label>
+        <label>latMax: <input id="latMax" type="number" step="0.0001" value="14.8"></label>
+        <label>lonMin: <input id="lonMin" type="number" step="0.0001" value="120.9"></label>
+        <label>lonMax: <input id="lonMax" type="number" step="0.0001" value="121.2"></label>
+
+        <label style="margin-top:6px;">
+          Upload GeoJSON:
+          <input type="file" id="soilGeojsonFile" accept=".json,.geojson">
+        </label>
+        <label style="margin-top:6px;">Mapping JSON (soilType → medium ID):
+          <textarea id="soilMappingJson" rows="3"
+            placeholder='e.g. {"Water":2,"Coastal Lowland":5,"Central Plateau":6,...}'></textarea>
+        </label>
+        <button id="applyGeojsonBtn">Load GeoJSON</button>
+        <div id="geojsonStatus" style="font-size:12px; color:#900; margin-top:4px;"></div>
+
+        <!-- GeoJSON Tutorial button, initially hidden; shown when mode=geojson -->
+        <button id="geojsonTutorialBtn" style="margin-top:8px; display:none;">GeoJSON Tutorial</button>
+      </div>
+
+      <!-- Apply Terrain -->
+      <button id="applyTerrain" style="margin-top:8px;">Apply Terrain</button>
     </div>
   </details>
+
+  <!-- Modal overlay for tutorial -->
+  <div id="modalOverlay" class="modal-overlay">
+    <div class="modal-content">
+      <header>
+        <span>GeoJSON Usage Tutorial</span>
+        <button id="modalCloseBtn" style="background:transparent; border:none; color:white; font-size:18px; cursor:pointer;">&times;</button>
+      </header>
+      <div class="modal-body">
+        <p>This tutorial shows how to prepare and use a GeoJSON file to define soil/terrain regions for Metro Manila (or any region).</p>
+        <p><strong>1. Prepare a GeoJSON file</strong>: Your GeoJSON should have <code>Feature</code> objects with a <code>properties.soil_type</code> field whose values match keys in the Mapping JSON.</p>
+        <p>Example GeoJSON snippet:</p>
+        <pre style="background:#eee; padding:8px; border-radius:4px; font-size:13px; max-height:150px; overflow:auto;">
+{
+  "type": "FeatureCollection",
+  "features": [
+    {
+      "type": "Feature",
+      "properties": { "soil_type": "Coastal Lowland" },
+      "geometry": {
+        "type": "Polygon",
+        "coordinates": [
+          [
+            [120.95,14.55], [120.98,14.55], [120.98,14.52], [120.95,14.52], [120.95,14.55]
+          ]
+        ]
+      }
+    },
+    {
+      "type": "Feature",
+      "properties": { "soil_type": "Marikina Valley" },
+      "geometry": {
+        "type": "Polygon",
+        "coordinates": [
+          [
+            [121.05,14.65], [121.10,14.65], [121.10,14.60], [121.05,14.60], [121.05,14.65]
+          ]
+        ]
+      }
+    }
+    // ... more features ...
+  ]
+}
+        </pre>
+        <p><strong>2. Mapping JSON</strong>: Provide a JSON object mapping each <code>soil_type</code> string to the corresponding medium ID. For example:</p>
+        <pre style="background:#eee; padding:8px; border-radius:4px; font-size:13px; max-height:120px; overflow:auto;">
+{
+  "Water": 2,
+  "Coastal Lowland": 5,
+  "Central Plateau": 6,
+  "Marikina Valley": 7,
+  "Novaliches Loam": 8,
+  "San Luis Clay": 9,
+  "Soft Soil": 0,
+  "Sand": 3,
+  "Rock": 4
+}
+        </pre>
+        <p><strong>3. Set bounding box</strong>: Enter latMin, latMax, lonMin, lonMax covering your GeoJSON region (e.g., Metro Manila approx 14.4–14.8 lat, 120.9–121.2 lon). The grid will map each cell’s center to a lat/lon via linear interpolation.</p>
+        <p><strong>4. Load GeoJSON</strong>: Click “Load GeoJSON” and ensure status says “GeoJSON loaded.”</p>
+        <p><strong>5. Apply Terrain</strong>: Click “Apply Terrain” to fill the grid according to your GeoJSON and mapping.</p>
+        <p>If any cell falls outside all features, it defaults to <code>Soft Soil</code> (ID 0). You can adjust default behavior in code if needed.</p>
+      </div>
+      <footer>
+        <button id="modalCloseBtnFooter">Close</button>
+      </footer>
+    </div>
+  </div>
 
   <!-- Top-right: visibility & reset -->
   <div id="globalControls">
