Added finish and save terrain
finish button stops the ismulation and lets u edit after wards

save terrain saves terrain into json and also added ability to load from json

--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@
       </label>
       <button id="startSim">Start</button>
       <button id="replay">Replay</button>
+      <button id="finishSim">Finish</button>
       <button id="reload">Reload</button>
 
       <details style="margin-top:8px;">
@@ -353,6 +354,14 @@
 
       <!-- Apply Terrain -->
       <button id="applyTerrain" style="margin-top:8px;">Apply Terrain</button>
+
+      <!-- Save / Load Terrain -->
+      <button id="saveTerrain" style="margin-top:8px;">Save Terrain</button>
+      <label style="margin-top:8px; display:block;">
+        Load Terrain File:
+        <input type="file" id="loadTerrainFile" accept=".json" style="margin-top:4px;">
+      </label>
+      <button id="loadTerrain" style="margin-top:4px;">Load Terrain</button>
     </div>
   </details>
 
